magicsticklibs/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    COMMENT
    QUOTE_1
    QUOTE_2
    XOR

Grammar

Rule 0     S' -> start
Rule 1     start -> MAIN COLON body
Rule 2     body -> goto body
Rule 3     body -> unset body
Rule 4     body -> print body
Rule 5     body -> exit body
Rule 6     body -> tag body
Rule 7     body -> if body
Rule 8     body -> assign body
Rule 9     body -> declaration body
Rule 10    body -> empty
Rule 11    goto -> GOTO NAME SEMICOLON
Rule 12    unset -> UNSET L_PAR TVAR R_PAR SEMICOLON
Rule 13    unset -> UNSET L_PAR AVAR R_PAR SEMICOLON
Rule 14    unset -> UNSET L_PAR VVAR R_PAR SEMICOLON
Rule 15    unset -> UNSET L_PAR SVAR R_PAR SEMICOLON
Rule 16    unset -> UNSET L_PAR SPVAR R_PAR SEMICOLON
Rule 17    unset -> UNSET L_PAR RAVAR R_PAR SEMICOLON
Rule 18    print -> PRINT L_PAR TVAR R_PAR SEMICOLON
Rule 19    print -> PRINT L_PAR AVAR R_PAR SEMICOLON
Rule 20    print -> PRINT L_PAR VVAR R_PAR SEMICOLON
Rule 21    print -> PRINT L_PAR SVAR R_PAR SEMICOLON
Rule 22    print -> PRINT L_PAR SPVAR R_PAR SEMICOLON
Rule 23    print -> PRINT L_PAR RAVAR R_PAR SEMICOLON
Rule 24    print -> PRINT L_PAR TVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
Rule 25    print -> PRINT L_PAR AVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
Rule 26    print -> PRINT L_PAR VVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
Rule 27    print -> PRINT L_PAR SVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
Rule 28    print -> PRINT L_PAR SPVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
Rule 29    print -> PRINT L_PAR RAVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
Rule 30    print -> PRINT L_PAR STRING R_PAR SEMICOLON
Rule 31    exit -> EXIT SEMICOLON
Rule 32    tag -> NAME COLON
Rule 33    if -> IF L_PAR condition R_PAR GOTO NAME SEMICOLON
Rule 34    condition -> condition AND condition
Rule 35    condition -> condition OR condition
Rule 36    condition -> NOT condition
Rule 37    condition -> relational
Rule 38    relational -> arithmetic EQUAL arithmetic
Rule 39    relational -> arithmetic NOT_EQUAL arithmetic
Rule 40    relational -> arithmetic GREATER arithmetic
Rule 41    relational -> arithmetic LESS arithmetic
Rule 42    relational -> arithmetic GREATER_EQUAL arithmetic
Rule 43    relational -> arithmetic LESS_EQUAL arithmetic
Rule 44    relational -> arithmetic
Rule 45    arithmetic -> arithmetic PLUS arithmetic
Rule 46    arithmetic -> arithmetic MINUS arithmetic
Rule 47    arithmetic -> arithmetic MULTIPLY arithmetic
Rule 48    arithmetic -> arithmetic DIVIDE arithmetic
Rule 49    arithmetic -> arithmetic REMAINDER arithmetic
Rule 50    arithmetic -> INTEGER
Rule 51    arithmetic -> DECIMAL
Rule 52    arithmetic -> STRING
Rule 53    arithmetic -> var
Rule 54    arithmetic -> array_access
Rule 55    var -> TVAR
Rule 56    var -> AVAR
Rule 57    var -> VVAR
Rule 58    var -> SVAR
Rule 59    var -> RAVAR
Rule 60    var -> SPVAR
Rule 61    array_access -> <empty>
Rule 62    assign -> TVAR ASSIGN condition SEMICOLON
Rule 63    assign -> AVAR ASSIGN condition SEMICOLON
Rule 64    assign -> VVAR ASSIGN condition SEMICOLON
Rule 65    assign -> SVAR ASSIGN condition SEMICOLON
Rule 66    assign -> TVAR ASSIGN conversion SEMICOLON
Rule 67    assign -> AVAR ASSIGN conversion SEMICOLON
Rule 68    assign -> VVAR ASSIGN conversion SEMICOLON
Rule 69    assign -> SVAR ASSIGN conversion SEMICOLON
Rule 70    assign -> TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
Rule 71    assign -> AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
Rule 72    assign -> VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
Rule 73    assign -> SVAR ASSIGN READ L_PAR R_PAR SEMICOLON
Rule 74    assign -> TVAR ASSIGN bitwise SEMICOLON
Rule 75    assign -> AVAR ASSIGN bitwise SEMICOLON
Rule 76    assign -> VVAR ASSIGN bitwise SEMICOLON
Rule 77    assign -> SVAR ASSIGN bitwise SEMICOLON
Rule 78    assign -> TVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
Rule 79    assign -> AVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
Rule 80    assign -> VVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
Rule 81    assign -> SVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
Rule 82    assign -> SPVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
Rule 83    assign -> RAVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
Rule 84    assign -> TVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
Rule 85    assign -> AVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
Rule 86    assign -> VVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
Rule 87    assign -> SVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
Rule 88    bitwise -> var AND_B var
Rule 89    bitwise -> var OR_B var
Rule 90    bitwise -> var XOR_B var
Rule 91    bitwise -> var SHIFT_L var
Rule 92    bitwise -> var SHIFT_R var
Rule 93    bitwise -> NOT_B TVAR
Rule 94    bitwise -> NOT_B AVAR
Rule 95    bitwise -> NOT_B VVAR
Rule 96    bitwise -> NOT_B SVAR
Rule 97    conversion -> L_PAR type R_PAR var
Rule 98    type -> INT
Rule 99    type -> FLOAT
Rule 100   type -> CHAR
Rule 101   declaration -> var
Rule 102   declaration -> TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
Rule 103   declaration -> AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
Rule 104   declaration -> VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
Rule 105   declaration -> SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
Rule 106   declaration -> SPVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
Rule 107   declaration -> RAVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
Rule 108   declaration -> TVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
Rule 109   declaration -> AVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
Rule 110   declaration -> VVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
Rule 111   declaration -> SVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
Rule 112   declaration -> SPVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
Rule 113   declaration -> RAVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
Rule 114   empty -> <empty>

Terminals, with rules where they appear

ABS                  : 84 85 86 87
AND                  : 34
AND_B                : 88
ARRAY                : 102 103 104 105 106 107
ASSIGN               : 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 102 103 104 105 106 107
AVAR                 : 13 19 25 56 63 67 71 75 79 85 94 103 109
CHAR                 : 100
COLON                : 1 32
COMMA                : 
COMMENT              : 
DECIMAL              : 51
DIVIDE               : 48
EQUAL                : 38
EXIT                 : 31
FLOAT                : 99
GOTO                 : 11 33
GREATER              : 40
GREATER_EQUAL        : 42
IF                   : 33
INT                  : 98
INTEGER              : 50
LESS                 : 41
LESS_EQUAL           : 43
L_BRACKET            : 24 25 26 27 28 29 78 79 80 81 82 83 108 109 110 111 112 113
L_PAR                : 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 33 70 71 72 73 84 85 86 87 97 102 103 104 105 106 107
MAIN                 : 1
MINUS                : 46
MULTIPLY             : 47
NAME                 : 11 32 33
NOT                  : 36
NOT_B                : 93 94 95 96
NOT_EQUAL            : 39
OR                   : 35
OR_B                 : 89
PLUS                 : 45
PRINT                : 18 19 20 21 22 23 24 25 26 27 28 29 30
QUOTE_1              : 
QUOTE_2              : 
RAVAR                : 17 23 29 59 83 107 113
READ                 : 70 71 72 73
REMAINDER            : 49
R_BRACKET            : 24 25 26 27 28 29 78 79 80 81 82 83 108 109 110 111 112 113
R_PAR                : 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 33 70 71 72 73 84 85 86 87 97 102 103 104 105 106 107
SEMICOLON            : 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 33 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 102 103 104 105 106 107 108 109 110 111 112 113
SHIFT_L              : 91
SHIFT_R              : 92
SPVAR                : 16 22 28 60 82 106 112
STRING               : 30 52
SVAR                 : 15 21 27 58 65 69 73 77 81 87 96 105 111
TVAR                 : 12 18 24 55 62 66 70 74 78 84 93 102 108
UNSET                : 12 13 14 15 16 17
VVAR                 : 14 20 26 57 64 68 72 76 80 86 95 104 110
XOR                  : 
XOR_B                : 90
error                : 

Nonterminals, with rules where they appear

arithmetic           : 24 25 26 27 28 29 38 38 39 39 40 40 41 41 42 42 43 43 44 45 45 46 46 47 47 48 48 49 49 78 79 80 81 82 83 108 109 110 111 112 113
array_access         : 54
assign               : 8
bitwise              : 74 75 76 77
body                 : 1 2 3 4 5 6 7 8 9
condition            : 33 34 34 35 35 36 62 63 64 65 78 79 80 81 82 83
conversion           : 66 67 68 69
declaration          : 9
empty                : 10
exit                 : 5
goto                 : 2
if                   : 7
print                : 4
relational           : 37
start                : 0
tag                  : 6
type                 : 97
unset                : 3
var                  : 53 84 85 86 87 88 88 89 89 90 90 91 91 92 92 97 101

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . MAIN COLON body

    MAIN            shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> MAIN . COLON body

    COLON           shift and go to state 3


state 3

    (1) start -> MAIN COLON . body
    (2) body -> . goto body
    (3) body -> . unset body
    (4) body -> . print body
    (5) body -> . exit body
    (6) body -> . tag body
    (7) body -> . if body
    (8) body -> . assign body
    (9) body -> . declaration body
    (10) body -> . empty
    (11) goto -> . GOTO NAME SEMICOLON
    (12) unset -> . UNSET L_PAR TVAR R_PAR SEMICOLON
    (13) unset -> . UNSET L_PAR AVAR R_PAR SEMICOLON
    (14) unset -> . UNSET L_PAR VVAR R_PAR SEMICOLON
    (15) unset -> . UNSET L_PAR SVAR R_PAR SEMICOLON
    (16) unset -> . UNSET L_PAR SPVAR R_PAR SEMICOLON
    (17) unset -> . UNSET L_PAR RAVAR R_PAR SEMICOLON
    (18) print -> . PRINT L_PAR TVAR R_PAR SEMICOLON
    (19) print -> . PRINT L_PAR AVAR R_PAR SEMICOLON
    (20) print -> . PRINT L_PAR VVAR R_PAR SEMICOLON
    (21) print -> . PRINT L_PAR SVAR R_PAR SEMICOLON
    (22) print -> . PRINT L_PAR SPVAR R_PAR SEMICOLON
    (23) print -> . PRINT L_PAR RAVAR R_PAR SEMICOLON
    (24) print -> . PRINT L_PAR TVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (25) print -> . PRINT L_PAR AVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (26) print -> . PRINT L_PAR VVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (27) print -> . PRINT L_PAR SVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (28) print -> . PRINT L_PAR SPVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (29) print -> . PRINT L_PAR RAVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (30) print -> . PRINT L_PAR STRING R_PAR SEMICOLON
    (31) exit -> . EXIT SEMICOLON
    (32) tag -> . NAME COLON
    (33) if -> . IF L_PAR condition R_PAR GOTO NAME SEMICOLON
    (62) assign -> . TVAR ASSIGN condition SEMICOLON
    (63) assign -> . AVAR ASSIGN condition SEMICOLON
    (64) assign -> . VVAR ASSIGN condition SEMICOLON
    (65) assign -> . SVAR ASSIGN condition SEMICOLON
    (66) assign -> . TVAR ASSIGN conversion SEMICOLON
    (67) assign -> . AVAR ASSIGN conversion SEMICOLON
    (68) assign -> . VVAR ASSIGN conversion SEMICOLON
    (69) assign -> . SVAR ASSIGN conversion SEMICOLON
    (70) assign -> . TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (71) assign -> . AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (72) assign -> . VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (73) assign -> . SVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (74) assign -> . TVAR ASSIGN bitwise SEMICOLON
    (75) assign -> . AVAR ASSIGN bitwise SEMICOLON
    (76) assign -> . VVAR ASSIGN bitwise SEMICOLON
    (77) assign -> . SVAR ASSIGN bitwise SEMICOLON
    (78) assign -> . TVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (79) assign -> . AVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (80) assign -> . VVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (81) assign -> . SVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (82) assign -> . SPVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (83) assign -> . RAVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (84) assign -> . TVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (85) assign -> . AVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (86) assign -> . VVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (87) assign -> . SVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (101) declaration -> . var
    (102) declaration -> . TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (103) declaration -> . AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (104) declaration -> . VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (105) declaration -> . SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (106) declaration -> . SPVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (107) declaration -> . RAVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (108) declaration -> . TVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (109) declaration -> . AVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (110) declaration -> . VVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (111) declaration -> . SVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (112) declaration -> . SPVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (113) declaration -> . RAVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (114) empty -> .
    (55) var -> . TVAR
    (56) var -> . AVAR
    (57) var -> . VVAR
    (58) var -> . SVAR
    (59) var -> . RAVAR
    (60) var -> . SPVAR

    GOTO            shift and go to state 14
    UNSET           shift and go to state 16
    PRINT           shift and go to state 23
    EXIT            shift and go to state 24
    NAME            shift and go to state 15
    IF              shift and go to state 25
    TVAR            shift and go to state 17
    AVAR            shift and go to state 18
    VVAR            shift and go to state 19
    SVAR            shift and go to state 20
    SPVAR           shift and go to state 21
    RAVAR           shift and go to state 22
    $end            reduce using rule 114 (empty -> .)

    body                           shift and go to state 4
    goto                           shift and go to state 5
    unset                          shift and go to state 6
    print                          shift and go to state 7
    exit                           shift and go to state 8
    tag                            shift and go to state 9
    if                             shift and go to state 10
    assign                         shift and go to state 11
    declaration                    shift and go to state 12
    empty                          shift and go to state 13
    var                            shift and go to state 26

state 4

    (1) start -> MAIN COLON body .

    $end            reduce using rule 1 (start -> MAIN COLON body .)


state 5

    (2) body -> goto . body
    (2) body -> . goto body
    (3) body -> . unset body
    (4) body -> . print body
    (5) body -> . exit body
    (6) body -> . tag body
    (7) body -> . if body
    (8) body -> . assign body
    (9) body -> . declaration body
    (10) body -> . empty
    (11) goto -> . GOTO NAME SEMICOLON
    (12) unset -> . UNSET L_PAR TVAR R_PAR SEMICOLON
    (13) unset -> . UNSET L_PAR AVAR R_PAR SEMICOLON
    (14) unset -> . UNSET L_PAR VVAR R_PAR SEMICOLON
    (15) unset -> . UNSET L_PAR SVAR R_PAR SEMICOLON
    (16) unset -> . UNSET L_PAR SPVAR R_PAR SEMICOLON
    (17) unset -> . UNSET L_PAR RAVAR R_PAR SEMICOLON
    (18) print -> . PRINT L_PAR TVAR R_PAR SEMICOLON
    (19) print -> . PRINT L_PAR AVAR R_PAR SEMICOLON
    (20) print -> . PRINT L_PAR VVAR R_PAR SEMICOLON
    (21) print -> . PRINT L_PAR SVAR R_PAR SEMICOLON
    (22) print -> . PRINT L_PAR SPVAR R_PAR SEMICOLON
    (23) print -> . PRINT L_PAR RAVAR R_PAR SEMICOLON
    (24) print -> . PRINT L_PAR TVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (25) print -> . PRINT L_PAR AVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (26) print -> . PRINT L_PAR VVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (27) print -> . PRINT L_PAR SVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (28) print -> . PRINT L_PAR SPVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (29) print -> . PRINT L_PAR RAVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (30) print -> . PRINT L_PAR STRING R_PAR SEMICOLON
    (31) exit -> . EXIT SEMICOLON
    (32) tag -> . NAME COLON
    (33) if -> . IF L_PAR condition R_PAR GOTO NAME SEMICOLON
    (62) assign -> . TVAR ASSIGN condition SEMICOLON
    (63) assign -> . AVAR ASSIGN condition SEMICOLON
    (64) assign -> . VVAR ASSIGN condition SEMICOLON
    (65) assign -> . SVAR ASSIGN condition SEMICOLON
    (66) assign -> . TVAR ASSIGN conversion SEMICOLON
    (67) assign -> . AVAR ASSIGN conversion SEMICOLON
    (68) assign -> . VVAR ASSIGN conversion SEMICOLON
    (69) assign -> . SVAR ASSIGN conversion SEMICOLON
    (70) assign -> . TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (71) assign -> . AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (72) assign -> . VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (73) assign -> . SVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (74) assign -> . TVAR ASSIGN bitwise SEMICOLON
    (75) assign -> . AVAR ASSIGN bitwise SEMICOLON
    (76) assign -> . VVAR ASSIGN bitwise SEMICOLON
    (77) assign -> . SVAR ASSIGN bitwise SEMICOLON
    (78) assign -> . TVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (79) assign -> . AVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (80) assign -> . VVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (81) assign -> . SVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (82) assign -> . SPVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (83) assign -> . RAVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (84) assign -> . TVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (85) assign -> . AVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (86) assign -> . VVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (87) assign -> . SVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (101) declaration -> . var
    (102) declaration -> . TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (103) declaration -> . AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (104) declaration -> . VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (105) declaration -> . SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (106) declaration -> . SPVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (107) declaration -> . RAVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (108) declaration -> . TVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (109) declaration -> . AVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (110) declaration -> . VVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (111) declaration -> . SVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (112) declaration -> . SPVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (113) declaration -> . RAVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (114) empty -> .
    (55) var -> . TVAR
    (56) var -> . AVAR
    (57) var -> . VVAR
    (58) var -> . SVAR
    (59) var -> . RAVAR
    (60) var -> . SPVAR

    GOTO            shift and go to state 14
    UNSET           shift and go to state 16
    PRINT           shift and go to state 23
    EXIT            shift and go to state 24
    NAME            shift and go to state 15
    IF              shift and go to state 25
    TVAR            shift and go to state 17
    AVAR            shift and go to state 18
    VVAR            shift and go to state 19
    SVAR            shift and go to state 20
    SPVAR           shift and go to state 21
    RAVAR           shift and go to state 22
    $end            reduce using rule 114 (empty -> .)

    goto                           shift and go to state 5
    body                           shift and go to state 27
    unset                          shift and go to state 6
    print                          shift and go to state 7
    exit                           shift and go to state 8
    tag                            shift and go to state 9
    if                             shift and go to state 10
    assign                         shift and go to state 11
    declaration                    shift and go to state 12
    empty                          shift and go to state 13
    var                            shift and go to state 26

state 6

    (3) body -> unset . body
    (2) body -> . goto body
    (3) body -> . unset body
    (4) body -> . print body
    (5) body -> . exit body
    (6) body -> . tag body
    (7) body -> . if body
    (8) body -> . assign body
    (9) body -> . declaration body
    (10) body -> . empty
    (11) goto -> . GOTO NAME SEMICOLON
    (12) unset -> . UNSET L_PAR TVAR R_PAR SEMICOLON
    (13) unset -> . UNSET L_PAR AVAR R_PAR SEMICOLON
    (14) unset -> . UNSET L_PAR VVAR R_PAR SEMICOLON
    (15) unset -> . UNSET L_PAR SVAR R_PAR SEMICOLON
    (16) unset -> . UNSET L_PAR SPVAR R_PAR SEMICOLON
    (17) unset -> . UNSET L_PAR RAVAR R_PAR SEMICOLON
    (18) print -> . PRINT L_PAR TVAR R_PAR SEMICOLON
    (19) print -> . PRINT L_PAR AVAR R_PAR SEMICOLON
    (20) print -> . PRINT L_PAR VVAR R_PAR SEMICOLON
    (21) print -> . PRINT L_PAR SVAR R_PAR SEMICOLON
    (22) print -> . PRINT L_PAR SPVAR R_PAR SEMICOLON
    (23) print -> . PRINT L_PAR RAVAR R_PAR SEMICOLON
    (24) print -> . PRINT L_PAR TVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (25) print -> . PRINT L_PAR AVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (26) print -> . PRINT L_PAR VVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (27) print -> . PRINT L_PAR SVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (28) print -> . PRINT L_PAR SPVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (29) print -> . PRINT L_PAR RAVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
    (30) print -> . PRINT L_PAR STRING R_PAR SEMICOLON
    (31) exit -> . EXIT SEMICOLON
    (32) tag -> . NAME COLON
    (33) if -> . IF L_PAR condition R_PAR GOTO NAME SEMICOLON
    (62) assign -> . TVAR ASSIGN condition SEMICOLON
    (63) assign -> . AVAR ASSIGN condition SEMICOLON
    (64) assign -> . VVAR ASSIGN condition SEMICOLON
    (65) assign -> . SVAR ASSIGN condition SEMICOLON
    (66) assign -> . TVAR ASSIGN conversion SEMICOLON
    (67) assign -> . AVAR ASSIGN conversion SEMICOLON
    (68) assign -> . VVAR ASSIGN conversion SEMICOLON
    (69) assign -> . SVAR ASSIGN conversion SEMICOLON
    (70) assign -> . TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (71) assign -> . AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (72) assign -> . VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (73) assign -> . SVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (74) assign -> . TVAR ASSIGN bitwise SEMICOLON
    (75) assign -> . AVAR ASSIGN bitwise SEMICOLON
    (76) assign -> . VVAR ASSIGN bitwise SEMICOLON
    (77) assign -> . SVAR ASSIGN bitwise SEMICOLON
    (78) assign -> . TVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (79) assign -> . AVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (80) assign -> . VVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (81) assign -> . SVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (82) assign -> . SPVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (83) assign -> . RAVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
    (84) assign -> . TVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (85) assign -> . AVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (86) assign -> . VVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (87) assign -> . SVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
    (101) declaration -> . var
    (102) declaration -> . TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (103) declaration -> . AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (104) declaration -> . VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (105) declaration -> . SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (106) declaration -> . SPVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (107) declaration -> . RAVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (108) declaration -> . TVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (109) declaration -> . AVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (110) declaration -> . VVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (111) declaration -> . SVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (112) declaration -> . SPVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (113) declaration -> . RAVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
    (114) empty -> .
    (55) var -> . TVAR
    (56) var -> . AVAR
    (57) var -> . VVAR
    (58) var -> . SVAR
    (59) var -> . RAVAR
    (60) var -> . SPVAR

    GOTO            shift and go to state 14
    UNSET           shift and go to state 16
    PRINT           shift and go to state 23
    EXIT            shift and go to state 24
    NAME            shift and go to state 15
    IF              shift and go to state 25
    TVAR            shift and go to state 17
    AVAR            shift and go to state 18
    VVAR            shift and go to state 19
    SVAR            shift and go to state 20
    SPVAR           shift and go to state 21
    RAVAR           shift and go to state 22
    $end            reduce using rule 114 (empty -> .)

    unset                          shift and go to state 6
    body                           shift and go to state 28
    goto                           shift and go to state 5
    print                          shift and go to state 7
    exit                           shift and go to state 8
    tag                            shift and go to state 9
    if                             shift and go to state 10
    assign                         shift and go to state 11
    declaration                    shift and go to state 12
    empty                          shift and go to state 13
    var                            shift and go to state 26

state 7
